# feedback-fusion

./: .dockerignore  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .redocly.lint-ignore.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.toml  README.md  ]  build.rs  index.yaml  justfile  package.json  pnpm-lock.yaml  release-please-config.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: charts.yml  ci.yml  lib.yml  nightly.yml  release-charts.yml  release-dashboard.yml  release-lib.yml  release-please.yaml  release-server.yml  release.yml
0.1.3/: 404.html  hashmap.json  index.html
0.1.3/assets/: app.vyqRlvAZ.js  docs_configuration.md.MEtopHLW.js  docs_configuration.md.MEtopHLW.lean.js  docs_deployment_docker.md.ByWG9A81.js  docs_deployment_docker.md.ByWG9A81.lean.js  docs_deployment_helm.md.DCE4jR50.js  docs_deployment_helm.md.DCE4jR50.lean.js  docs_deployment_verify.md.DnB5dEM0.js  docs_deployment_verify.md.DnB5dEM0.lean.js  docs_frontend-library_index.md.-Uszw-7z.js  docs_frontend-library_index.md.-Uszw-7z.lean.js  docs_frontend-library_prompt.md.CqwU8KQ5.js  docs_frontend-library_prompt.md.CqwU8KQ5.lean.js  docs_frontend-library_theming.md.BFCPay8-.js  docs_frontend-library_theming.md.BFCPay8-.lean.js  docs_index.md.BJdfrRPd.js  docs_observability_logging.md.dA3nfZ62.js  docs_observability_logging.md.dA3nfZ62.lean.js  docs_observability_tracing.md.rIK2jw4o.js  docs_observability_tracing.md.rIK2jw4o.lean.js  index.md.C_jrYxUQ.lean.js  style.DJ3w6pzR.css
0.1.3/docs/: configuration.html  index.html
0.1.4/: 404.html  hashmap.json  index.html
0.1.4/assets/: app.DXkQUDS-.js  docs_configuration.md.BwWc56z7.js  docs_configuration.md.BwWc56z7.lean.js  docs_deployment_docker.md.D0hv-bZ6.js  docs_deployment_docker.md.D0hv-bZ6.lean.js  docs_deployment_helm.md.D6tLPloi.js  docs_deployment_helm.md.D6tLPloi.lean.js  docs_frontend-library_index.md.WPNik-yk.js  docs_frontend-library_index.md.WPNik-yk.lean.js  docs_frontend-library_prompt.md.DoqE7uo6.js  docs_frontend-library_prompt.md.DoqE7uo6.lean.js  docs_frontend-library_theming.md.DVFzM8M2.js  docs_frontend-library_theming.md.DVFzM8M2.lean.js  docs_index.md.BmOV4ad6.js  docs_observability_logging.md.sjGsHjGW.js  docs_observability_logging.md.sjGsHjGW.lean.js  docs_observability_tracing.md.BxL9Rs9F.js  docs_observability_tracing.md.BxL9Rs9F.lean.js  index.md.CDaf7ZVH.lean.js  style.DdFmXVbC.css
0.1.4/docs/: configuration.html  index.html
0.2.0/: 404.html  hashmap.json  index.html
0.2.0/assets/: app.Bsf_7Me2.js  docs_configuration.md.XOGD9voU.js  docs_configuration.md.XOGD9voU.lean.js  docs_deployment_docker.md.Cbr1Xu9X.js  docs_deployment_docker.md.Cbr1Xu9X.lean.js  docs_deployment_helm.md.o4Z_MnUl.js  docs_deployment_helm.md.o4Z_MnUl.lean.js  docs_frontend-library_index.md.BmG0GLeF.js  docs_frontend-library_index.md.BmG0GLeF.lean.js  docs_frontend-library_prompt.md.CpS_G_AZ.js  docs_frontend-library_prompt.md.CpS_G_AZ.lean.js  docs_frontend-library_theming.md.B885Wmvi.js  docs_frontend-library_theming.md.B885Wmvi.lean.js  docs_index.md.weIIC54s.js  docs_observability_logging.md.n9c5uNEE.js  docs_observability_logging.md.n9c5uNEE.lean.js  docs_observability_tracing.md.ep4ZXsm9.js  docs_observability_tracing.md.ep4ZXsm9.lean.js  index.md.ByoerrEh.js  style.gbEEmsNh.css
0.2.0/docs/: configuration.html  index.html
0.3.0/: 404.html  hashmap.json  index.html
0.3.0/assets/: app.CfuBpNpV.js  docs_caching.md.BZfcifzB.js  docs_configuration.md.BcuQ-52K.lean.js  docs_deployment_docker.md.rjJ5m9Fr.js  docs_deployment_helm.md.Bwzphlyk.js  docs_frontend-library_index.md.DT0q8HKE.lean.js  docs_frontend-library_prompt.md.BfaUT6uO.js  docs_frontend-library_theming.md.a0-7nPLU.js  docs_index.md.D2azh-Vd.js  docs_observability_logging.md.BUemTWZ3.js  docs_observability_tracing.md.COqc-EsF.lean.js  index.md.C4e1QoXI.js  style.Cg0A1F0m.css
0.3.0/docs/: caching.html  configuration.html  index.html
0.4.0/: 404.html  hashmap.json  index.html
0.4.0/assets/: app.BuU6T5Gr.js  docs_caching.md.DKv9fFEE.js  (+20 more)
0.5.3/: 404.html  hashmap.json  index.html
benches/: grpc.rs
bindings/: CheckboxOptions.ts  CheckboxResponse.ts  CheckboxStyle.ts  CreateFeedbackPromptFieldRequest.ts  CreateFeedbackPromptRequest.ts  CreateFeedbackTargetRequest.ts  FeedbackPrompt.ts  FeedbackPromptField.ts  FeedbackPromptFieldData.ts  FeedbackPromptFieldResponse.ts  FeedbackPromptInputOptions.ts  FeedbackPromptInputType.ts  FeedbackPromptResponse.ts  FeedbackTarget.ts  GetFeedbackPromptResponsesResponseWrapper.ts  NumberOptions.ts  NumberResponse.ts  Page.ts  PutFeedbackPromptFieldRequest.ts  PutFeedbackPromptRequest.ts  PutFeedbackTargetRequest.ts  RangeOptions.ts  RangeResponse.ts  RatingOptions.ts  RatingResponse.ts  SelectionOptions.ts  SelectionResponse.ts  SubmitFeedbackPromptResponseRequest.ts  TextOptions.ts  TextResponse.ts  index.ts
codegen/: Cargo.toml
common/: Cargo.toml  build.rs
common/src/: lib.rs  tests.rs
common/src/database/: mod.rs  mssql.sql  mysql.sql  postgres.sql
common/src/database/schema/: audit.rs  index.rs  mod.rs  user.rs
common/src/observability/: mod.rs  otlp.rs
dashboard/: .gitignore  Dockerfile  app.vue  eslint.config.js  index.d.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
docs/: Cargo.toml  index.md  mock.ts  package.json  pnpm-lock.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_create_and_export.rs
indexer/: Cargo.toml
indexer/src/: config.rs  error.rs  main.rs
indexer/src/broker/: fluvio.rs  grpc.rs  mod.rs
indexer/src/processor/: audit.rs  index.rs  mod.rs
lib/: .gitignore  Cargo.toml  README.md  lit-localize.json  package.json  pnpm-lock.yaml  tsconfig.json
nightly/: 404.html  hashmap.json  index.html
proto/: feedback-fusion-event-v1.proto  feedback-fusion-v1.proto
src/: bindings.rs  cache.rs  config.rs  docs.rs  error.rs  main.rs  otlp.rs  prelude.rs  state.rs  tests.rs
tests/: authentication.rs  common.rs  field.rs  http_tests.rs  integration_test.rs  prompt.rs  response.rs  target.rs
(+1815 files in other folders)
