[package]
name = "feedback-fusion"
version = "0.5.0"
edition = "2024"
license = "MIT"

[dependencies]
feedback_fusion_common = { path = "./common" }
feedback_fusion_codegen = { path = "./codegen" }

anyhow = "1.0.98"
aliri = "0.6.3"
aliri_clock = "0.1.4"
aliri_oauth2 = { version = "0.10.1", features = ["rustls-tls"] }
aliri_tower = "0.6.0"
aliri_traits = "0.1.1"
async-recursion = "1.1.1"
async-trait = "0.1.80"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bb8 = { version = "0.8.5" }
cached = { version = "0.53.0", features = ["async", "proc_macro"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
derivative = "2.2.0"
envy = "0.4.2"
fluvio = "0.50.1"
futures = "0.3.30"
getset = "0.1.2"
gxhash = "3.4.1"
hcl-rs = "0.18.5"
http = "1.2.0"
itertools = "0.13.0"
kanal = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.22"
nanoid = "0.4.0"
openidconnect = "3.5.0"
openssl = { version = "0.10.68", features = ["vendored"] }
paste = "1.0.14"
prost = "0.13.0"
prost-types = "0.13.0"
rbatis = "=4.5.33"
rayon = "1.10.0"
rbdc-pg = { version = "4.5.17" }
rbdc-mysql = { version = "4.5.17" }
rbdc-mssql = { version = "4.5.7" }
rbs = "4.5.13"
serde = { version = "1.0.197", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.115"
serde-this-or-that = { git = "https://github.com/Randoooom/serde-this-or-that.git", branch = "feature/bool-signed" }
skytable = { version = "0.8.10" }
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.0"
tonic = { version = "0.12.0", features = ["tls-native-roots"] }
tonic-health = "0.12.0"
tonic-reflection = "0.12.0"
tonic-web = "0.12.0"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.5.0"
tokio-retry = "0.3"
tower-http = { version = "0.5.2", features = ["trace", "validate-request"] }
tracing = "0.1.39"
tracing-opentelemetry = { version = "0.25.0" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typed-builder = "0.20.0"
validator = { version = "0.18", features = ["derive"] }
version-compare = "0.2.0"
wildcard = "0.2.0"

[dev-dependencies]
criterion = "0.5.1"
lazy_static = "1.4.0"
paste = "1.0.14"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
test-log = "0.2.15"
feedback_fusion_common = { path = "./common", features = ["arbitrary"] }

[[bench]]
name = "grpc"
harness = false

[workspace]
members = [".", "fuzz", "common", "codegen", "indexer"]
