[package]
name = "feedback-fusion"
version = "0.5.2"
edition = "2024"
license = "MIT"

[dependencies]
feedback_fusion_common = { path = "./common" }
feedback_fusion_codegen = { path = "./codegen" }

anyhow = "1.0.102"
aliri = { git = "https://github.com/randoooom/aliri.git", branch = "chore/tower-0.6" }
aliri_clock = { git = "https://github.com/randoooom/aliri.git", branch = "chore/tower-0.6" }
aliri_oauth2 = { git = "https://github.com/randoooom/aliri.git", branch = "chore/tower-0.6", features = ["rustls"] }
aliri_tower = { git = "https://github.com/randoooom/aliri.git", branch = "chore/tower-0.6" }
aliri_traits = { git = "https://github.com/randoooom/aliri.git", branch = "chore/tower-0.6" }
arc-swap = "1.8.2"
axum = "0.8.8"
async-recursion = "1.1.1"
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
bb8 = { version = "0.8.5" }
cached = { version = "0.58.0", features = ["async", "proc_macro"] }
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
derivative = "2.2.0"
envy = "0.4.2"
fluvio = "0.50.1"
futures = "0.3.32"
getset = "0.1.6"
gxhash = "3.5.0"
hcl-rs = "0.19.6"
http = "1.4.0"
itertools = "0.14.0"
kanal = "0.1.1"
lazy_static = "1.5.0"
log = "0.4.29"
nanoid = "0.4.0"
openidconnect = "4.0.1"
openssl = { version = "0.10.75", features = ["vendored"] }
paste = "1.0.15"
prost = "0.14.3"
prost-types = "0.14.3"
rustls = "0.23.37"
rbatis = "4.7.2"
rayon = "1.11.0"
rbdc-pg = "4.7.1"
rbdc-mysql = "4.7.1"
rbdc-mssql = "4.7.0"
rbs = "4.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-inline-default = "1.0.1"
serde_json = "1.0.149"
serde-this-or-that = { git = "https://github.com/Randoooom/serde-this-or-that.git", branch = "feature/bool-signed" }
skytable = { version = "=0.8.10" }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tonic = { version = "0.14.5", features = ["tls-aws-lc"] }
tonic-health = "0.14.5"
tonic-reflection = "0.14.5"
tonic-web = "0.14.5"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tokio-retry = "0.3"
tower-http = { version = "0.6.8", features = [
  "trace",
  "validate-request",
  "cors",
] }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.32.1" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
typed-builder = "0.23.2"
validator = { version = "0.20", features = ["derive"] }
version-compare = "0.2.1"
wildcard = "0.3.0"

[dev-dependencies]
criterion = "0.8.2"
lazy_static = "1.5.0"
paste = "1.0.15"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
test-log = "0.2.19"
feedback_fusion_common = { path = "./common", features = ["arbitrary"] }

[[bin]]
name = "indexer"
path = "./indexer/src/main.rs"

[[bench]]
name = "grpc"
harness = false

[workspace]
members = [".", "fuzz", "common", "codegen", "indexer"]
