[package]
name = "feedback_fusion_common"
version = "0.1.0"
edition = "2021"

[dependencies]
feedback_fusion_codegen = { path = "../codegen" }

arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
lazy_static = { version = "1.5.0", optional = true }
rbatis = "4.5.21"
tonic = "0.12.0"
openidconnect = { version = "3.5.0", optional = true }
prost = "0.13.0"
prost-types = "0.13.0"
validator = { version = "0.18.1", features = ["derive", "unic"] }

[build-dependencies]
tonic-build = "0.12.0"

[features]
arbitrary = ["dep:arbitrary", "dep:lazy_static", "dep:openidconnect"]
