[package]
name = "feedback_fusion_common"
version = "0.5.3"
edition = "2024"

[dependencies]
feedback_fusion_codegen = { path = "../codegen" }

anyhow = "1.0.102"
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
derivative = "2.2.0"
getset = "0.1.6"
itertools = "0.14.0"
lazy_static = { version = "1.5.0" }
log = "0.4.29"
nanoid = "0.4.0"
rbatis = "4.7.2"
rbdc-pg = "4.7.1" 
rbdc-mysql = "4.7.1"
rbdc-mssql ="4.7.0"
rbs = "4.7.0"
regex = "1.12.3"
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.32.1" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-retry = "0.3.0"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tower-http = { version = "0.6.8", features = ["trace", "validate-request"] }
typed-builder = "0.23.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-inline-default = "1.0.1"
openidconnect = { version = "4.0.1" }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31.0" }
opentelemetry-http = { version = "0.31.0" }
paste = "1.0.15"
prost = "0.14.3"
prost-types = "0.14.3"
validator = { version = "0.20.0", features = ["derive", "unic"] }

[build-dependencies]
tonic-prost-build = "0.14.5"

[features]
arbitrary = ["dep:arbitrary"]
