[package]
name = "feedback-fusion-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
feedback_fusion_common = { path = "../common", features = ["arbitrary"] }

arbitrary = "1.4.1"
libfuzzer-sys = "0.4"
serde_yaml = "0.9.34"
tonic = "0.12.0"
tokio = { version = "1.37.0", features = ["full"] }

[[bin]]
name = "fuzz_create_and_export"
path = "fuzz_targets/fuzz_create_and_export.rs"
test = false
doc = false
bench = false
