[package]
name = "feedback-fusion-indexer"
version = "0.5.1"
edition = "2024"

[dependencies]
feedback_fusion_common = { path = "../common" }

anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
fluvio = "0.50.1"
futures = "0.3.32"
gxhash = "3.5.0"
hcl-rs = "0.19.6"
kanal = "0.1.1"
lazy_static = "1.5.0"
nanoid = "0.4.0"
prost = "0.14.3"
rbatis = "4.7.2"
rbs = "4.7.0"
rustls = "0.23.37"
serde = { features = ["derive"], version = "1.0.228" }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.32.1", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { features = ["full"], version = "1.50.0" }
tokio-retry = "0.3.0"
tonic = { version = "0.14.5", features = ["tls-aws-lc"] }
tonic-health = "0.14.5"
tonic-reflection = "0.14.5"
typed-builder = "0.23.2"
prost-types = "0.14.3"
